# SearchEngineDiploma

./: CMakeLists.txt
config/: settings.ini
db/: schema.sql
include/: config.hpp  db.hpp  indexer.hpp
indexer/: main.cpp
searcher/: main.cpp
spider/: main.cpp
